opam-version: "1.2"
maintainer: "opensource@janestreet.com"
authors: ["Jane Street Group, LLC <opensource@janestreet.com>"]
homepage: "https://github.com/janestreet/expect_test_helpers"
bug-reports: "https://github.com/janestreet/expect_test_helpers/issues"
dev-repo: "git+https://github.com/janestreet/expect_test_helpers.git"
license: "Apache-2.0"
build: [
  ["jbuilder" "build" "-p" name "-j" jobs]
]
depends: [
  "async"
  "core"
  "expect_test_helpers_kernel"
  "ppx_jane"
  "sexp_pretty"
  "jbuilder"                   {build & >= "1.0+beta18.1"}
  "ocaml-migrate-parsetree"    {>= "1.0"}
  "ppxlib"                     {>= "0.1.0"}
]
available: [ ocaml-version >= "4.06.1" ]
descr: "
Async helpers for writing expectation tests

This library provides helper functions for writing expect tests.

Note that this library uses Async, for helpers that don't use Async,
look at expect_test_helpers_kernel.
"
